[tool.poetry]
name = "flask-blog"
version = "0.1.0"
description = ""
authors = ["syafiq <syafiq.termizi@omesti.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
gunicorn = "^20.0.4"
pypandoc = "^1.5"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
